syntax = "proto3";
package demoonechain.citizen;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "demo-onechain/x/citizen/types";

// Msg defines the Msg service.
service Msg {
      rpc TransferOwnership(MsgTransferOwnership) returns (MsgTransferOwnershipResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgTransferOwnership {
  string creator = 1;
  string newOwner = 2;
}

message MsgTransferOwnershipResponse {
}

// this line is used by starport scaffolding # proto/tx/message
